--- a/src/Makefile
+++ b/src/Makefile
@@ -892,7 +892,12 @@ ifeq ($(optimize), yes)
     endif
     # Inline settings
     ifeq ($(comp), clang)
-        CXXFLAGS += -mllvm -inline-threshold=500
+        ifneq ($(filter Windows_NT Darwin, $(OS) $(KERNEL)), )
+            # skip -mllvm on Windows or macOS
+        else ifneq ($(filter -m64,$(CXXFLAGS)), )
+            # only add for 64-bit Linux
+            CXXFLAGS += -mllvm -inline-threshold=500
+        endif
     endif
 endif
 
