--- a/src/Makefile
+++ b/src/Makefile
@@ -144,8 +144,9 @@ endif
 # explicitly check for the list of supported architectures (as listed with make help),
 # the user can override with 'make ARCH=x86-64-avx512icl SUPPORTED_ARCH=yes'
 ifeq ($(ARCH), $(filter $(ARCH), \
-                 x86-64-avx512icl x86-64-vnni512 x86-64-avx512 x86-64-avxvnni x86-64-bmi2 x86-64-avx2 \
-                 x86-64-sse41-popcnt x86-64-modern x86-64-sse41 x86-64-ssse3-popcnt x86-64-ssse3 x86-64 general-64 \
+                 x86-64-avx512icl-comp x86-64-avx512icl x86-64-vnni512-comp x86-64-vnni512 \
+                 x86-64-avx512-comp x86-64-avx512 x86-64-avxvnni-comp x86-64-avxvnni x86-64-bmi2-comp x86-64-bmi2 \
+                 x86-64-avx2 x86-64-sse41-popcnt x86-64-modern x86-64-sse41 x86-64-ssse3-popcnt x86-64-ssse3 x86-64 general-64 \
                  x86-32-sse41-popcnt x86-32-sse41 x86-32-sse2-popcnt x86-32-sse2 x86-32-popcnt x86-32 general-32 \
                  ppc-64-altivec ppc-64-vsx ppc-64 ppc-32 e2k armv7 armv7-neon armv8 armv8-dotprod apple-silicon riscv64 \
                  loongarch64 loongarch64-lsx loongarch64-lasx))
@@ -251,6 +252,10 @@ ifeq ($(findstring -avx2, $(ARCH)), -avx2)
     ssse3 = yes
     sse41 = yes
     avx2 = yes
+endif
+
+ifeq ($(findstring -comp, $(ARCH)), -comp)
+    compressed = yes
 endif
 
 ifeq ($(findstring -bmi2, $(ARCH)), -bmi2)
