--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@ root = true
 
 [*]
 charset = utf-8
-end_of_line = lf
+end_of_line = crlf
 insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 120
@@ -15,7 +15,7 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
 charset = utf-8
-end_of_line = lf
+end_of_line = crlf
 max_line_length = 120
 
 [*.md]
