--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -211,18 +211,18 @@ jobs:
           make -j4 ARCH=x86-32-sse41-popcnt build
           ../tests/signature.sh $benchref
 
+      - name: Test x86-32-sse41 build
+        if: matrix.config.run_32bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-32-sse41 build
+          ../tests/signature.sh $benchref
+
       - name: Test x86-32-sse2 build
         if: matrix.config.run_32bit_tests
         run: |
           make clean
           make -j4 ARCH=x86-32-sse2 build
-          ../tests/signature.sh $benchref
-
-      - name: Test x86-32-popcnt build
-        if: matrix.config.run_32bit_tests
-        run: |
-          make clean
-          make -j4 ARCH=x86-32-popcnt build
           ../tests/signature.sh $benchref
 
       - name: Test x86-32 build
