--- a/src/Makefile
+++ b/src/Makefile
@@ -147,7 +147,7 @@ ifeq ($(ARCH), $(filter $(ARCH), \
                  x86-64-avx512icl-comp x86-64-avx512icl x86-64-vnni512-comp x86-64-vnni512 \
                  x86-64-avx512-comp x86-64-avx512 x86-64-avxvnni-comp x86-64-avxvnni x86-64-bmi2-comp x86-64-bmi2 \
                  x86-64-avx2 x86-64-sse41-popcnt x86-64-modern x86-64-sse41 x86-64-ssse3-popcnt x86-64-ssse3 x86-64 general-64 \
-                 x86-32-sse41-popcnt x86-32-sse41 x86-32-sse2-popcnt x86-32-sse2 x86-32-popcnt x86-32 general-32 \
+                 x86-32-sse41-popcnt x86-32-sse41 x86-32-sse2 x86-32 general-32 \
                  ppc-64-altivec ppc-64-vsx ppc-64 ppc-32 e2k armv7-neon armv7 armv8-dotprod armv8 apple-silicon riscv64 \
                  loongarch64-lasx loongarch64-lsx loongarch64))
    SUPPORTED_ARCH = yes
@@ -942,9 +942,7 @@ help:
 	echo "general-64              > unspecified 64-bit" && \
 	echo "x86-32-sse41-popcnt     > x86 32-bit with sse41 and popcnt support" && \
 	echo "x86-32-sse41            > x86 32-bit with sse41 support" && \
-	echo "x86-32-sse2-popcnt      > x86 32-bit with sse2 and popcnt support" && \
 	echo "x86-32-sse2             > x86 32-bit with sse2 support" && \
-	echo "x86-32-popcnt           > x86 32-bit with popcnt support" && \
 	echo "x86-32                  > x86 32-bit generic (with mmx compile support)" && \
 	echo "general-32              > unspecified 32-bit" && \
 	echo "ppc-64-altivec          > PPC 64-bit with altivec support" && \
