--- a/.github/workflows/upload_binaries.yml
+++ b/.github/workflows/upload_binaries.yml
@@ -61,12 +61,10 @@ jobs:
           mkdir -p DON-workflow
           mv "${{ matrix.config.simple_name }}-${{ matrix.binaries }}" DON-workflow
           cd DON-workflow
-          cp -r src ../DON/
+          #cp -r src ../DON/
           cp -r scripts ../DON/
           cp DON-$NAME-$BINARY$EXT ../DON/
-          #cp "Top CPU Contributors.txt" ../DON/
           cp Copying.txt ../DON/
-          #cp AUTHORS ../DON/
           cp CITATION.cff ../DON/
           cp README.md ../DON/
           cp CONTRIBUTING.md ../DON/
