--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -81,14 +81,21 @@ jobs:
           RUN_PREFIX="$SDE" ../tests/signature.sh $benchref
           mv ./DON$EXT ../DON-$NAME-$BINARY$EXT
 
-      - name: Remove non src files
-        run: git clean -fx
+      - name: Verify binary exists
+        run: |
+          echo "Checking binary DON-$NAME-$BINARY$EXT exists..."
+          test -f DON-$NAME-$BINARY$EXT
+
+      - name: Remove non-required files
+        run: |
+          rm -rf src
+          git clean -fxd
 
       - name: Upload artifact for (pre)-release
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.config.simple_name }} ${{ matrix.binaries }}
+          name: ${{ matrix.config.simple_name }}-${{ matrix.binaries }}
           path: |
-             .
-             !.git
-             !.output
+            .
+            !.git
+            !.output
