--- a/.github/workflows/upload_binaries.yml
+++ b/.github/workflows/upload_binaries.yml
@@ -31,29 +31,40 @@ jobs:
       - name: Download artifact from compilation
         uses: actions/download-artifact@v4
         with:
-          name: ${{ matrix.config.simple_name }} ${{ matrix.binaries }}
-          path: ${{ matrix.config.simple_name }} ${{ matrix.binaries }}
+          name: ${{ matrix.config.simple_name }}-${{ matrix.binaries }}
+          path: ${{ matrix.config.simple_name }}-${{ matrix.binaries }}
+
+      - name: Debug token
+        run: |
+          echo "Debugging GitHub token..."
+          echo "Token length: ${#TOKEN}"
+          if [ -z "$TOKEN" ]; then
+            echo "TOKEN is empty!"
+          else
+            echo "TOKEN is set"
+          fi
+        env:
+          TOKEN: ${{ secrets.token }}
 
       - name: Create Package
         run: |
-          mkdir DON
+          mkdir -p DON
 
       - name: Download wiki
         run: |
-          git clone https://github.com/ehsanrashid/DON.git wiki
+          git clone "https://x-access-token:${{ secrets.token }}@github.com/ehsanrashid/DON.git" wiki
           rm -rf wiki/.git
           mv wiki DON/
 
       - name: Copy files
         run: |
-          mv "${{ matrix.config.simple_name }} ${{ matrix.binaries }}" DON-workflow
+          mkdir -p DON-workflow
+          mv "${{ matrix.config.simple_name }}-${{ matrix.binaries }}" DON-workflow
           cd DON-workflow
-          cp -r src ../DON/
+          #cp -r src ../DON/
           cp -r scripts ../DON/
           cp DON-$NAME-$BINARY$EXT ../DON/
-          #cp "Top CPU Contributors.txt" ../DON/
           cp Copying.txt ../DON/
-          #cp AUTHORS ../DON/
           cp CITATION.cff ../DON/
           cp README.md ../DON/
           cp CONTRIBUTING.md ../DON/
