--- a/.github/workflows/don.yml
+++ b/.github/workflows/don.yml
@@ -119,7 +119,7 @@ jobs:
       matrix: ${{ needs.Matrix.outputs.arm_matrix }}
   Binaries:
     if: github.repository == 'ehsanrashid/DON'
-    needs: [Prerelease, Matrix, Compilation]
+    needs: [Prerelease, Matrix] # , Compilation]
     uses: ./.github/workflows/upload_binaries.yml
     with:
       matrix: ${{ needs.Matrix.outputs.matrix }}
