--- a/.github/workflows/games.yml
+++ b/.github/workflows/games.yml
@@ -39,5 +39,11 @@ jobs:
                -engine name=DON2 cmd=/home/runner/work/DON/DON/DON/src/DON\
                -ratinginterval 1 -report penta=true -each proto=uci tc=4+0.04 -log file=fast.log | tee fast.out
           cat fast.log
-          ! grep "Assertion" fast.log > /dev/null
-          ! grep "disconnect" fast.out > /dev/null
+          if grep -iq "assertion" fast.log; then
+            echo "ERROR: Assertion found in fast.log"
+            exit 1
+          fi
+          if grep -iq "disconnect" fast.out; then
+            echo "ERROR: Disconnect found in fast.out"
+            exit 1
+          fi
