--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -89,13 +89,16 @@ jobs:
       - name: Remove non-required files
         run: |
           rm -rf src
-          git clean -fxd
+          git clean -fxd || true
 
       - name: Upload artifact for (pre)-release
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.config.simple_name }}-${{ matrix.binaries }}
           path: |
-            .
-            !.git
-            !.output
+            scripts/
+            DON-$NAME-$BINARY$EXT
+            Copying.txt
+            CITATION.cff
+            README.md
+            CONTRIBUTING.md
