--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -12,9 +12,9 @@ jobs:
     env:
       COMPCXX: ${{ matrix.config.compiler }}
       COMP: ${{ matrix.config.comp }}
-      EXT: ${{ matrix.config.ext }}
       NAME: ${{ matrix.config.simple_name }}
       BINARY: ${{ matrix.binaries }}
+      EXT: ${{ matrix.config.ext }}
       SDE: ${{ matrix.config.sde }}
     strategy:
       fail-fast: false
@@ -74,30 +74,29 @@ jobs:
       # x86-64 with newer extensions tests
       - name: Compile ${{ matrix.config.binaries }} build
         run: |
+          mkdir -p artifact
           make clean
           make -j4 profile-build ARCH=$BINARY COMP=$COMP RUN_PREFIX="$SDE"
           make strip ARCH=$BINARY COMP=$COMP
           RUN_PREFIX="$SDE" ../tests/signature.sh $benchref
-          mv ./DON$EXT ../DON-$NAME-$BINARY$EXT
+          mv ./DON$EXT artifact/DON-$NAME-$BINARY$EXT
 
       - name: Verify binary exists
         run: |
           echo "Checking binary DON-$NAME-$BINARY$EXT exists..."
-          ls -l ../DON-$NAME-$BINARY$EXT
-          test -f ../DON-$NAME-$BINARY$EXT
+          ls -l artifact/DON-$NAME-$BINARY$EXT
+          test -f artifact/DON-$NAME-$BINARY$EXT
 
-      - name: Remove non-required files
-        run: |
-          rm -rf src
-          git clean -fxd || true
+      - name: Remove non src files
+        run: git clean -fx
 
       - name: Upload artifact for (pre)-release
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.config.simple_name }}-${{ matrix.binaries }}
+          name: ${{ env.NAME }}-${{ env.BINARY }}
           path: |
             scripts/
-            DON-$NAME-$BINARY$EXT
+            artifact/DON-$NAME-$BINARY$EXT
             Copying.txt
             CITATION.cff
             README.md
