--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -25,6 +25,7 @@ jobs:
       # Returns null if no pre-release exists
       - name: Get Commit SHA of Latest Pre-release
         run: |
+          # Install required packages
           sudo apt-get update
           sudo apt-get install -y curl jq
 
@@ -56,7 +57,8 @@ jobs:
             echo "OFFICIAL_RELEASE=false" >> $GITHUB_ENV
           fi
 
-      # Replace softprops action with gh CLI
+      # Create empty pre-release, the other upload_binaries.yml will upload the binaries
+      # to this pre-release.
       - name: Create Empty Prerelease
         if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         run: |
