--- a/.github/workflows/DON-setup.yml
+++ b/.github/workflows/DON-setup.yml
@@ -61,8 +61,7 @@ jobs:
             echo "OFFICIAL_RELEASE=false" >> $GITHUB_ENV
           fi
 
-      # Create new pre-release, the other upload_binaries.yml will upload the binaries
-      # to this pre-release.
+      # Create new pre-release, upload_binaries.yml will upload the binaries to pre-release.
       - name: Create Prerelease
         if: github.ref_name == 'main' && env.CHANGES == '0' && env.OFFICIAL_RELEASE == 'false'
         uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
