--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -114,9 +114,15 @@ jobs:
           # Exclude artifact folder from cleanup
           git clean -fxe artifact/
 
+      - name: Debug paths
+        run: |
+          pwd
+          ls -la
+          ls -la artifact/
+
       - name: Upload artifact for (pre)-release
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.NAME }}-${{ env.BINARY }}
-          path: artifact/
+          path: src/artifact/
           if-no-files-found: error
