--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -196,191 +196,191 @@ jobs:
 
       # x86-32 tests
 
-      # - name: Test debug x86-32-sse41-popcnt build
-      #   if: matrix.config.run_32bit_tests
-      #   run: |
-      #     export CXXFLAGS="-Werror -D_GLIBCXX_DEBUG"
-      #     make clean
-      #     make -j4 ARCH=x86-32-sse41-popcnt optimize=no debug=yes build
-      #     ../tests/signature.sh $benchref
+      - name: Test debug x86-32-sse41-popcnt build
+        if: matrix.config.run_32bit_tests
+        run: |
+          export CXXFLAGS="-Werror -D_GLIBCXX_DEBUG"
+          make clean
+          make -j4 ARCH=x86-32-sse41-popcnt optimize=no debug=yes build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-32-sse41-popcnt build
-      #   if: matrix.config.run_32bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-32-sse41-popcnt build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-32-sse41-popcnt build
+        if: matrix.config.run_32bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-32-sse41-popcnt build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-32-sse41 build
-      #   if: matrix.config.run_32bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-32-sse41 build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-32-sse41 build
+        if: matrix.config.run_32bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-32-sse41 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-32-sse2 build
-      #   if: matrix.config.run_32bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-32-sse2 build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-32-sse2 build
+        if: matrix.config.run_32bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-32-sse2 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-32 build
-      #   if: matrix.config.run_32bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-32 build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-32 build
+        if: matrix.config.run_32bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-32 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test general-32 build
-      #   if: matrix.config.run_32bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=general-32 build
-      #     ../tests/signature.sh $benchref
+      - name: Test general-32 build
+        if: matrix.config.run_32bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=general-32 build
+          ../tests/signature.sh $benchref
 
       # x86-64 tests
 
-      # - name: Test debug x86-64-avx2 build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     export CXXFLAGS="-Werror -D_GLIBCXX_DEBUG"
-      #     make clean
-      #     make -j4 ARCH=x86-64-avx2 optimize=no debug=yes build
-      #     ../tests/signature.sh $benchref
+      - name: Test debug x86-64-avx2 build
+        if: matrix.config.run_64bit_tests
+        run: |
+          export CXXFLAGS="-Werror -D_GLIBCXX_DEBUG"
+          make clean
+          make -j4 ARCH=x86-64-avx2 optimize=no debug=yes build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-64-bmi2 build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-64-bmi2 build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-64-bmi2 build
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-64-bmi2 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-64-avx2 build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-64-avx2 build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-64-avx2 build
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-64-avx2 build
+          ../tests/signature.sh $benchref
 
       # Test a deprecated arch
-      # - name: Test x86-64-modern build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-64-modern build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-64-modern build
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-64-modern build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-64-sse41-popcnt build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-64-sse41-popcnt build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-64-sse41-popcnt build
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-64-sse41-popcnt build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-64-ssse3-popcnt build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-64-ssse3-popcnt build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-64-ssse3-popcnt build
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-64-ssse3-popcnt build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-64-ssse3 build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-64-ssse3 build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-64-ssse3 build
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-64-ssse3 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test x86-64 build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-64 build
-      #     ../tests/signature.sh $benchref
+      - name: Test x86-64 build
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-64 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test general-64 build
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=general-64 build
-      #     ../tests/signature.sh $benchref
+      - name: Test general-64 build
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=general-64 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test apple-silicon build
-      #   if: matrix.config.run_m1_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=apple-silicon build
-      #     ../tests/signature.sh $benchref
+      - name: Test apple-silicon build
+        if: matrix.config.run_m1_tests
+        run: |
+          make clean
+          make -j4 ARCH=apple-silicon build
+          ../tests/signature.sh $benchref
 
       # armv8 tests
 
-      # - name: Test armv8 build
-      #   if: matrix.config.run_armv8_tests
-      #   run: |
-      #     if [ $COMP == ndk ]; then
-      #       export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
-      #       export LDFLAGS="-static -Wno-unused-command-line-argument"
-      #     fi
-      #     make clean
-      #     make -j4 ARCH=armv8 build
-      #     ../tests/signature.sh $benchref
+      - name: Test armv8 build
+        if: matrix.config.run_armv8_tests
+        run: |
+          if [ $COMP == ndk ]; then
+            export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
+            export LDFLAGS="-static -Wno-unused-command-line-argument"
+          fi
+          make clean
+          make -j4 ARCH=armv8 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test armv8-dotprod build
-      #   if: matrix.config.run_armv8_tests
-      #   run: |
-      #     if [ $COMP == ndk ]; then
-      #       export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
-      #       export LDFLAGS="-static -Wno-unused-command-line-argument"
-      #     fi
-      #     make clean
-      #     make -j4 ARCH=armv8-dotprod build
-      #     ../tests/signature.sh $benchref
+      - name: Test armv8-dotprod build
+        if: matrix.config.run_armv8_tests
+        run: |
+          if [ $COMP == ndk ]; then
+            export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
+            export LDFLAGS="-static -Wno-unused-command-line-argument"
+          fi
+          make clean
+          make -j4 ARCH=armv8-dotprod build
+          ../tests/signature.sh $benchref
 
       # armv7 tests
 
-      # - name: Test armv7 build
-      #   if: matrix.config.run_armv7_tests
-      #   run: |
-      #     export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
-      #     export LDFLAGS="-static -Wno-unused-command-line-argument"
-      #     make clean
-      #     make -j4 ARCH=armv7 build
-      #     ../tests/signature.sh $benchref
+      - name: Test armv7 build
+        if: matrix.config.run_armv7_tests
+        run: |
+          export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
+          export LDFLAGS="-static -Wno-unused-command-line-argument"
+          make clean
+          make -j4 ARCH=armv7 build
+          ../tests/signature.sh $benchref
 
-      # - name: Test armv7-neon build
-      #   if: matrix.config.run_armv7_tests
-      #   run: |
-      #     export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
-      #     export LDFLAGS="-static -Wno-unused-command-line-argument"
-      #     make clean
-      #     make -j4 ARCH=armv7-neon build
-      #     ../tests/signature.sh $benchref
+      - name: Test armv7-neon build
+        if: matrix.config.run_armv7_tests
+        run: |
+          export PATH=${{ env.ANDROID_NDK_BIN }}:$PATH
+          export LDFLAGS="-static -Wno-unused-command-line-argument"
+          make clean
+          make -j4 ARCH=armv7-neon build
+          ../tests/signature.sh $benchref
 
       # riscv64 tests
 
-      # - name: Test riscv64 build
-      #   if: matrix.config.run_riscv64_tests
-      #   run: |
-      #     echo "cd src && export LDFLAGS='-static' && make clean && make -j4 ARCH=riscv64 build" > script.sh
-      #     docker run --rm --platform ${{ matrix.config.platform }} -v ${{ github.workspace }}:/app don_builder
-      #     ../tests/signature.sh $benchref
+      - name: Test riscv64 build
+        if: matrix.config.run_riscv64_tests
+        run: |
+          echo "cd src && export LDFLAGS='-static' && make clean && make -j4 ARCH=riscv64 build" > script.sh
+          docker run --rm --platform ${{ matrix.config.platform }} -v ${{ github.workspace }}:/app don_builder
+          ../tests/signature.sh $benchref
 
       # ppc64 tests
 
-      # - name: Test ppc64 build
-      #   if: matrix.config.run_ppc64_tests
-      #   run: |
-      #     echo "cd src && export LDFLAGS='-static' && make clean && make -j4 ARCH=ppc-64 build" > script.sh
-      #     docker run --rm --platform ${{ matrix.config.platform }} -v ${{ github.workspace }}:/app don_builder
-      #     ../tests/signature.sh $benchref
+      - name: Test ppc64 build
+        if: matrix.config.run_ppc64_tests
+        run: |
+          echo "cd src && export LDFLAGS='-static' && make clean && make -j4 ARCH=ppc-64 build" > script.sh
+          docker run --rm --platform ${{ matrix.config.platform }} -v ${{ github.workspace }}:/app don_builder
+          ../tests/signature.sh $benchref
 
       # Other tests
 
-      # - name: Check perft and search reproducibility
-      #   if: matrix.config.run_64bit_tests
-      #   run: |
-      #     make clean
-      #     make -j4 ARCH=x86-64-avx2 build
-      #     ../tests/perft.sh
-      #     ../tests/reprosearch.sh
+      - name: Check perft and search reproducibility
+        if: matrix.config.run_64bit_tests
+        run: |
+          make clean
+          make -j4 ARCH=x86-64-avx2 build
+          ../tests/perft.sh
+          ../tests/reprosearch.sh
