--- a/.github/workflows/upload_binaries.yml
+++ b/.github/workflows/upload_binaries.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Assemble package
         run: |
-          ART_ROOT="artifact/$NAME-$BINARY"
+          ART_ROOT="artifact"
 
           echo "Artifact root:"
           ls -la "$ART_ROOT"
@@ -68,7 +68,7 @@ jobs:
           # Binary (required)
           cp "$ART_ROOT/DON-$NAME-$BINARY$EXT" DON/ || { echo "ERROR: Binary not found"; exit 1; }
 
-          # Optional extras (explicit, safe)
+          # Optional extras
           cp -r "$ART_ROOT/scripts" DON/ 2>/dev/null || true
           cp "$ART_ROOT"/{Copying.txt,CITATION.cff,README.md,CONTRIBUTING.md} DON/ 2>/dev/null || true
 
