--- a/.github/workflows/arm_compilation.yml
+++ b/.github/workflows/arm_compilation.yml
@@ -53,6 +53,15 @@ jobs:
         run: |
           benchref=""
 
+          echo "=== Checking first 5 commits ==="
+          for hash in $(git rev-list -5 HEAD); do
+            echo ""
+            echo "Commit: ${hash:0:8}"
+            echo "---"
+            git show -s "$hash"
+            echo "---"
+          done
+
           for hash in $(git rev-list -100 HEAD); do
             # Use git show -s to get entire commit
             msg="$(git show -s "$hash")"
