--- a/.github/workflows/arm_compilation.yml
+++ b/.github/workflows/arm_compilation.yml
@@ -52,35 +52,10 @@ jobs:
       - name: Extract the bench number from the commit history
         run: |
           benchref=""
-
-          echo "=== Checking first 5 commits ==="
-          for hash in $(git rev-list -5 HEAD); do
-            echo ""
-            echo "Commit: ${hash:0:8}"
-            echo "---"
-            git show -s "$hash"
-            echo "---"
-          done
-
           for hash in $(git rev-list -100 HEAD); do
-            # Use git show -s to get entire commit
-            msg="$(git show -s "$hash")"
-            # Search entire commit output for Bench
-            if [[ "$msg" =~ [Bb]ench[[:space:]]*:?[[:space:]]*([0-9]+) ]]; then
-              candidate="${BASH_REMATCH[1]}"
-              # Validate length (6-8 digits)
-              if [[ ${#candidate} -ge 6 && ${#candidate} -le 8 ]]; then
-                benchref="$candidate"
-                echo "Found benchmark: $benchref (commit: ${hash:0:8})"
-                echo "benchref=$benchref" >> $GITHUB_ENV
-                break
-              fi
-            fi
+            benchref=$(git show -s $hash | tac | grep -m 1 -o -x '[[:space:]]*\b[Bb]ench[ :]\+[1-9][0-9]\{5,7\}\b[[:space:]]*' | sed 's/[^0-9]//g') && break || true
           done
-
-          if [ -z "$benchref" ]; then
-            echo "No benchmark found"
-          fi
+          [[ -n "$benchref" ]] && echo "benchref=$benchref" >> $GITHUB_ENV && echo "From commit: $hash" && echo "Reference bench: $benchref" || echo "No bench found"
 
       - name: Download the used network from the fishtest framework
         run: make net
